# recode-ide

./: .gitignore  Cargo.toml  PLAN.md  README.md  index.html  package.json  vite.config.ts
docs/: ui-direction.md
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  NOTICE.md  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs  main.tsx  terminal.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/development/: mod.rs
src-tauri/src/commands/development/lsp/: commands.rs  types.rs
src-tauri/src/commands/project/: fs.rs  watcher.rs
src-tauri/src/commands/version_control/: git.rs
src/features/ai/components/: ai-panel.tsx
src/features/command-palette/components/: command-palette.tsx
src/features/command-palette/stores/: command-palette-store.ts
src/features/commands/: command-registry.ts  keymap-registry.ts  types.ts
src/features/commands/hooks/: use-global-keymaps.ts  use-register-core-commands.tsx
src/features/editor/components/: hybrid-editor.tsx
src/features/editor/config/: editor-constants.ts
src/features/editor/services/: editor-app-actions.ts
src/features/editor/stores/: editor-store.ts
src/features/editor/utils/: tokenize-line.ts
src/features/editor/workers/: tokenizer-client.ts  tokenizer-worker.ts
src/features/file-explorer/components/: file-explorer.tsx
src/features/file-explorer/services/: file-service.ts
src/features/git/components/: source-control-panel.tsx
src/features/git/services/: git-service.ts
src/features/outline/: types.ts
src/styles/: global.css
(+34 files in other folders)
