[package]
name = "recode"
version = "0.1.0"
description = "Recode AI code editor"
authors = ["Recode"]
edition = "2024"

[lib]
name = "recode_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
notify = "8.1"
notify-debouncer-mini = "0.6"
tauri = { version = "2", default-features = false, features = [
    "compression",
    "common-controls-v6",
    "dynamic-acl",
    "macos-private-api",
    "protocol-asset",
    "test",
    "unstable",
    "wry",
] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
walkdir = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
